--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "cross-env": "^7.0.3",
+    "devextreme": "21.1.5",
+    "devextreme-react": "21.1.5",
     "dotenv": "^8.2.0",
     "joi": "^17.4.1",
     "joi-validation-strategy": "^0.3.3",
@@ -39,6 +41,8 @@
     "react-validation-mixin": "^5.4.0",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
