--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "react": "^17.0.2",
     "react-bootstrap-sweetalert": "^4.4.0",
     "react-checkbox-group": "^5.0.2",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.12.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.4",
+    "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-slideshow-image": "^3.5.0",
