--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@trendmicro/react-sidenav": "^0.5.0",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.1.0",
     "cross-env": "^7.0.3",
     "devextreme": "21.1.5",
     "devextreme-react": "21.1.5",
@@ -26,8 +26,8 @@
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-bootstrap-sweetalert": "^4.4.0",
-    "react-checkbox-group": "^5.0.2",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
