--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dotenv": "^0.1.3",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.12.1",
+    "react-number-format": "^4.7.3",
     "react-password-strength-bar": "^0.4.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.4",
